# tynm

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
examples/: simple.rs
src/: lib.rs  parser.rs  type_name_info.rs  type_params_fmt_opts.rs  types.rs
