[package]
name = "tynm"
version = "0.1.8"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"
description = "Returns type names in shorter form."
repository = "https://github.com/azriel91/tynm"
documentation = "https://docs.rs/tynm/"
readme = "README.md"
keywords = ["typename", "type", "name"]
license = "MIT OR Apache-2.0"

[dependencies]
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
default = []

[badges]
appveyor = { repository = "azriel91/tynm" }
travis-ci = { repository = "azriel91/tynm" }
codecov = { repository = "azriel91/tynm" }
